# -

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  all_code.txt  main.py  pyproject.toml  크림봇 프로젝트 현황 (2026-03-27 오전 업데이트).txt  크림봇 프로젝트 현황 (2026-03-28 오전 업데이트).txt
.claude/: settings.json  settings.local.json
docs/: coverage_gap_2026_04_13.md  phase4_design.md  storage_sale_stage_b1_capture_guide.md  v3_pilot_checklist.md
logs/: bot_pilot.log.bak  bot_pilot.log.dryrun1  bot_pilot.log.dryrun2  bot_pilot.log.dryrun3  ui_spawn.out  v3_alerts.jsonl
scripts/: bootstrap_cold_volumes.py  bootstrap_cold_volumes_light.py  bot_runner.sh  bot_runner_install_task.ps1  check_claude_md.sh  diag_coverage.py  diag_match_rate.py  import_kream_json_to_sqlite.py  manual_auto_scan_live.py  migrate_clear_stale_v7d_15.py  migrate_dashboard.py  pilot_musinsa_push.py  probe_abcmart.py  probe_abcmart2.py  probe_abcmart_full.py  probe_adidas.py  probe_adidas2.py  probe_asics_sources.py  probe_kasina.py  probe_naver_asics.py  probe_nike.py  probe_nike_2.py  probe_nike_3.py  push_dump_full.py  recent_alerts.py  run_canary.py  stage2_completion_check.sh  stage3_completion_check.sh  stage4_completion_check.sh  stage_health_report.py  test_29cm.py  test_auto_scan_categories.py  test_cdp_connection.py  test_sources_live.py  v3_pilot_report.py  verify.py  verify_kasina_live.py  verify_nike_launch_skip.py
src/: config.py  continuous_scanner.py  coupon_store.py  kream_db_builder.py  matcher.py  price_tracker.py  profit_calculator.py  reverse_scanner.py  scan_cache.py  scanner.py  scheduler.py  (+3 more)
(+353 files in other folders)
